latest advances CSS3

--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     <!-- <div class="square laterSquare" id="firstSquare"></div>
     <div class="square2 laterSquare2" id="secondSquare"></div> -->
 
-    <div class="circle circleWeird"></div>
+    <!-- <div class="circle circleWeird"></div>
     <div class="circle"></div>
     <div class="circle circleWeird"></div>
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle circleWeird"></div>
 
-    <div id="squareGood">Hello, I know this is quite boring and we want to see some React action.</div>
+    <div id="squareGood">Hello, I know this is quite boring and we want to see some React action.</div> -->
 
+    <div class="wordContainer">
+        <a href="www.geekshubsacademy.com" target="_blank" class="link">Here we are now.</a>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
